--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#ffdb3d</color>
     <color name="colorPrimaryDark">#e4c122</color>
-    <color name="colorAccent">#ff9500</color>
+    <color name="colorAccent">#ffae00</color>
 </resources>
