handle result from SignInActivity on MainActivity

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -19,7 +19,7 @@
                 android:id="@+id/eTusername"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="아이디"
+                android:hint="사용자 이름"
                 android:inputType="text"
                 android:maxLines="1" />
         </android.support.design.widget.TextInputLayout>
@@ -76,7 +76,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:text="아이디 저장" />
+                android:text="사용자 이름 저장" />
 
             <CheckBox
                 android:id="@+id/cBSavePassword"
