enable to create cow object

--- a/app/src/main/res/layout/activity_edit_cow.xml
+++ b/app/src/main/res/layout/activity_edit_cow.xml
@@ -32,7 +32,6 @@
                 android:text="암컷" />
 
             <RadioButton
-                android:id="@+id/rBmale"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="30dp"
@@ -57,129 +56,14 @@
             android:layout_height="wrap_content"
             android:text="식별번호" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/eTnum1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="2"
-                android:inputType="number"
-                android:maxLength="3"
-                android:nextFocusDown="@+id/eTnum2"
-                android:text="002" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="-" />
-
-            <EditText
-                android:id="@id/eTnum2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="3"
-                android:inputType="number"
-                android:maxLength="4"
-                android:nextFocusDown="@+id/eTnum3" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="-" />
-
-            <EditText
-                android:id="@id/eTnum3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="3"
-                android:inputType="number"
-                android:maxLength="4"
-                android:nextFocusDown="@+id/eTnum4" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="-" />
-
-            <EditText
-                android:id="@id/eTnum4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="1"
-                android:inputType="number"
-                android:maxLength="1"
-                android:nextFocusDown="@+id/eTyear" />
-        </LinearLayout>
-    </LinearLayout>
-
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="10dp" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="5dp">
-
-        <TextView
-            android:id="@+id/textView4"
+        <EditText
+            android:id="@+id/eTnumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="출생일자" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/eTyear"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="3"
-                android:inputType="number"
-                android:maxLength="4"
-                android:nextFocusDown="@+id/eTmonth" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="년 " />
-
-            <EditText
-                android:id="@+id/eTmonth"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="2"
-                android:inputType="number"
-                android:maxLength="2"
-                android:nextFocusDown="@+id/eTday" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="월 " />
-
-            <EditText
-                android:id="@+id/eTday"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="2"
-                android:inputType="number"
-                android:maxLength="2"
-                android:nextFocusDown="@+id/eTmnum1" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="일" />
-
-        </LinearLayout>
+            android:inputType="number"
+            android:maxLength="15"
+            android:nextFocusDown="@+id/eTyear"
+            android:text="002-" />
     </LinearLayout>
 
     <Space
@@ -202,63 +86,53 @@
             android:layout_height="wrap_content"
             android:text="모개체 식별번호"/-->
 
+        <EditText
+            android:id="@+id/eTmotherNumber"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:maxLength="15"
+            android:nextFocusDown="@+id/bTconfirm"
+            android:text="002-" />
+    </LinearLayout>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="10dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="5dp">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/eTmnum1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="2"
-                android:inputType="number"
-                android:maxLength="3"
-                android:nextFocusDown="@+id/eTmnum2"
-                android:text="002" />
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="-" />
-
-            <EditText
-                android:id="@id/eTmnum2"
+                android:layout_marginEnd="20dp"
+                android:text="출생일자" />
+            <Button
+                android:id="@+id/bTeditBirthday"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="3"
-                android:inputType="number"
-                android:maxLength="4"
-                android:nextFocusDown="@+id/eTmnum3" />
-
-            <TextView
+                android:text="변경" />
+            <Button
+                android:id="@+id/bTremoveBirthday"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="-" />
+                android:text="해제" />
 
-            <EditText
-                android:id="@id/eTmnum3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="3"
-                android:inputType="number"
-                android:maxLength="4"
-                android:nextFocusDown="@+id/eTmnum4" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="-" />
-
-            <EditText
-                android:id="@id/eTmnum4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="1"
-                android:inputType="number"
-                android:maxLength="1"
-                android:nextFocusDown="@id/bTconfirm" />
         </LinearLayout>
+        <TextView
+            android:id="@+id/tVbirthday"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="지정 안함"/>
+
     </LinearLayout>
 
     <LinearLayout
@@ -277,7 +151,7 @@
             android:text="취소" />
 
         <Button
-            android:id="@+id/bTconfirm"
+            android:id="@id/bTconfirm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="20dp"
