--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,8 @@
             <android.support.v4.view.PagerTitleStrip
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorAccent"/>
+                android:background="@color/colorAccent"
+                android:padding="5dp"/>
 
         </android.support.v4.view.ViewPager>
     </android.support.constraint.ConstraintLayout>
