--- a/app/src/main/res/layout/fragment_cow_detail.xml
+++ b/app/src/main/res/layout/fragment_cow_detail.xml
@@ -5,10 +5,10 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CowDetailActivity$PlaceholderFragment">
+    tools:context=".CowDetailActivity$CowDetailFragment">
 
     <TextView
-        android:id="@+id/section_label"
+        android:id="@+id/tVnumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
