--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -53,8 +53,7 @@
                     android:layout_height="wrap_content"
                     android:hint="비밀번호 확인"
                     android:inputType="textPassword"
-                    android:maxLines="1"
-                    android:textSize="18sp" />
+                    android:maxLines="1" />
             </android.support.design.widget.TextInputLayout>
         </LinearLayout>
 
