--- a/app/src/main/res/layout/item_cow.xml
+++ b/app/src/main/res/layout/item_cow.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:textSize="30sp"
+            android:textSize="@dimen/text_size_huge"
             tools:text="summary"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
