enable update cow info at EditCowActivity

--- a/app/src/main/res/layout/activity_edit_cow.xml
+++ b/app/src/main/res/layout/activity_edit_cow.xml
@@ -32,6 +32,7 @@
                 android:text="암컷" />
 
             <RadioButton
+                android:id="@+id/rBmale"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="30dp"
