--- a/app/src/main/res/layout/activity_cow_detail.xml
+++ b/app/src/main/res/layout/activity_cow_detail.xml
@@ -13,6 +13,14 @@
         android:id="@+id/vPcowDetail"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <android.support.v4.view.PagerTitleStrip
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorAccent"
+            android:padding="5dp"
+            style="@style/PagerTitleStripLarge"/>
+    </android.support.v4.view.ViewPager>
 
 </android.support.design.widget.CoordinatorLayout>
