add refresh feature at MainActivity

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,6 +8,11 @@
         android:icon="@drawable/ic_add_black_24dp"
         app:showAsAction="ifRoom" />
     <item
+        android:id="@+id/mIrefresh"
+        android:title="새로 고침"
+        android:icon="@drawable/ic_refresh_black_24dp"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/mIsignOut"
         android:title="로그아웃"
         app:showAsAction="never" />
