add trashcan mode and enable to restore and destroy cow

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -13,6 +13,10 @@
         android:icon="@drawable/ic_refresh_black_24dp"
         app:showAsAction="ifRoom" />
     <item
+        android:id="@+id/mIdeleted"
+        android:title="휴지통"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/mIsignOut"
         android:title="로그아웃"
         app:showAsAction="never" />
