--- a/app/src/main/res/menu/menu_cow_detail.xml
+++ b/app/src/main/res/menu/menu_cow_detail.xml
@@ -5,6 +5,13 @@
     <item
         android:id="@+id/mIdelete"
         android:title="개체 삭제"
-        android:icon="@drawable/ic_delete_black_24dp"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/mIrestore"
+        android:title="개체 복원"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/mIdestroy"
+        android:title="개체 완전 삭제"
         app:showAsAction="never" />
 </menu>
