--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,25 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.holenet.cowinfo.MainActivity">
     <item
-        android:id="@+id/mIcreateCow"
-        android:title="개체 추가"
-        android:icon="@drawable/ic_add_black_24dp"
-        app:showAsAction="ifRoom" />
-    <item
-        android:id="@+id/mIrefresh"
-        android:title="새로 고침"
-        android:icon="@drawable/ic_refresh_black_24dp"
-        app:showAsAction="ifRoom" />
-    <item
-        android:id="@+id/mIdeleted"
-        android:title="휴지통"
-        app:showAsAction="never" />
-    <item
         android:id="@+id/mIsignOut"
         android:title="로그아웃"
+        android:orderInCategory="9999"
         app:showAsAction="never" />
     <item
         android:id="@+id/mIexit"
         android:title="종료"
+        android:orderInCategory="9999"
         app:showAsAction="never" />
 </menu>
