--- a/app/src/main/res/layout/activity_record_date.xml
+++ b/app/src/main/res/layout/activity_record_date.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".CowDetailActivity">
+    tools:context=".RecordDateActivity">
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/vPcowDetail"
+        android:id="@+id/vPrecordDate"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
@@ -21,4 +21,4 @@
             style="@style/PagerTitleStripLarge"/>
     </android.support.v4.view.ViewPager>
 
-</android.support.design.widget.CoordinatorLayout>
+</android.support.constraint.ConstraintLayout>
