'휴지통' -> '삭제된 개체'

--- a/app/src/main/res/menu/menu_cow_list.xml
+++ b/app/src/main/res/menu/menu_cow_list.xml
@@ -15,6 +15,6 @@
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/mIdeleted"
-        android:title="휴지통"
+        android:title="삭제된 개체"
         app:showAsAction="never" />
 </menu>
