--- a/app/src/main/res/layout/activity_edit_record.xml
+++ b/app/src/main/res/layout/activity_edit_record.xml
@@ -8,6 +8,14 @@
     android:padding="10dp"
     tools:context=".EditRecordActivity">
 
+    <TextView
+        android:id="@+id/tVcow"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:textSize="@dimen/text_size_huge"
+        tools:text="3781♀" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
