--- a/app/src/main/res/layout/item_record.xml
+++ b/app/src/main/res/layout/item_record.xml
@@ -38,12 +38,17 @@
 
         <TextView
             android:id="@+id/tVetc"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            app:layout_constraintBottom_toBottomOf="@+id/tVcontent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/tVday"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/tVcontent"
-            app:layout_constraintTop_toTopOf="@+id/tVcontent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:text="(추정)" />
 
     </android.support.constraint.ConstraintLayout>
