--- a/app/src/main/res/layout/item_cow.xml
+++ b/app/src/main/res/layout/item_cow.xml
@@ -36,24 +36,29 @@
 
         <TextView
             android:id="@+id/tVnumber"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            tools:text="number"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/tVcount"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tVsummary" />
+            app:layout_constraintTop_toBottomOf="@+id/tVsummary"
+            tools:text="number" />
 
         <TextView
             android:id="@+id/tVbirthday"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            tools:text="birthday"
+            android:gravity="right"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toEndOf="@+id/tVsummary"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="birthday" />
 
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
