notification: support before-a-day notice

--- a/app/src/main/res/layout/dialog_notice_settings.xml
+++ b/app/src/main/res/layout/dialog_notice_settings.xml
@@ -25,9 +25,19 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sTnotice">
+
+        <Switch
+            android:id="@+id/sTbeforeADay"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="하루 전 알림"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/constraintLayout3"
@@ -36,7 +46,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/sTbeforeADay">
 
             <TextView
                 android:id="@+id/textView4"
