--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -8,13 +8,101 @@
 
     <com.prolificinteractive.materialcalendarview.MaterialCalendarView
         android:id="@+id/mCVrecords"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:mcv_dateTextAppearance="@dimen/text_size_large"
         app:mcv_headerTextAppearance="@dimen/text_size_huge"
         app:mcv_monthLabels="@array/month_labels"
         app:mcv_weekDayLabels="@array/week_day_labels"
-        app:mcv_weekDayTextAppearance="@dimen/text_size_huge" />
+        app:mcv_weekDayTextAppearance="@dimen/text_size_huge">
+
+    </com.prolificinteractive.materialcalendarview.MaterialCalendarView>
+
+    <LinearLayout
+        android:id="@+id/linearLayout4"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mCVrecords">
+
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:drawablePadding="15px"
+                android:drawableStart="@drawable/shape_record_sj"
+                android:drawableTint="@color/recordSJ"
+                android:gravity="center_vertical"
+                android:text="수정"
+                android:textSize="@dimen/text_size_large" />
+        </FrameLayout>
+
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:drawablePadding="15px"
+                android:drawableStart="@drawable/shape_record_sj"
+                android:drawableTint="@color/recordJB"
+                android:gravity="center_vertical"
+                android:text="재발"
+                android:textSize="@dimen/text_size_large" />
+        </FrameLayout>
+
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:drawablePadding="15px"
+                android:drawableStart="@drawable/shape_record_sj"
+                android:drawableTint="@color/recordBM"
+                android:gravity="center_vertical"
+                android:text="분만"
+                android:textSize="@dimen/text_size_large" />
+        </FrameLayout>
+
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:drawablePadding="15px"
+                android:drawableStart="@drawable/shape_record_sj"
+                android:drawableTint="@color/recordGT"
+                android:gravity="center_vertical"
+                android:text="기타"
+                android:textSize="@dimen/text_size_large" />
+        </FrameLayout>
+
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
